--- a/src/useEffect/Index.css
+++ b/src/useEffect/Index.css
@@ -9,6 +9,18 @@
     color: white;
 }
 
+.App-header {
+    padding-top: 80px;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
+
 .ViewButton {
     display: flex;
     flex-direction: row;
